--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -132,10 +132,54 @@ a.sidebar-selected{
 /* CONTENT */
 
 
+/* SEARCHBAR */
+.searchform {
+    border: 1px solid #aaaaaa;
+    width: 250px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+}
+
+.searchfield {
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	width: 215px;
+	border: solid 1px #bcbbbb;
+	border-right: none;
+	border-style: none;
+	outline: none;
+	height: 15px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
+}
+
+.searchbutton{
+	width: 18px;
+	height: 16px;
+	float: right;
+	background: url('../images/search.png');
+	border: none;
+	margin-top: 6px;
+}
+
+.searchbutton:focus{
+	cursor: hand;
+}
+
+.searchbutton:hover{
+	cursor: hand;
+}
+
+/* CONTENT */
 section {
 	position: relative;
 	padding: 1em;
-	margin-left: -2px;
+	margin-left: -5px;
 	float: left;
 	background: white;
 	border: 1px solid #c2c2c2;
