--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -139,6 +139,7 @@ a.sidebar-selected{
     border-radius: 5px;
     -moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+	float: right;
 }
 
 .searchfield {
