--- a/html/css/style.css
+++ b/html/css/style.css
@@ -18,22 +18,22 @@ body{
 
 @font-face {
     font-family: 'Museo500';
-    src: url('../fonts/Museo 500/Museo500-Regular-webfont.eot');
-    src: url('../fonts/Museo 500/Museo500-Regular-webfont.eot?iefix') format('eot'),
-         url('../fonts/Museo 500/Museo500-Regular-webfont.woff') format('woff'),
-         url('../fonts/Museo 500/Museo500-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/Museo 500/Museo500-Regular-webfont.svg#webfontQF7qPaga') format('svg');
+    src: url('../fonts/Museo500/Museo500-Regular-webfont.eot');
+    src: url('../fonts/Museo500/Museo500-Regular-webfont.eot?iefix') format('eot'),
+         url('../fonts/Museo500/Museo500-Regular-webfont.woff') format('woff'),
+         url('../fonts/Museo500/Museo500-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/Museo500/Museo500-Regular-webfont.svg#webfontQF7qPaga') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Museo300';
-    src: url('../fonts/Museo 300/Museo300-Regular-webfont.eot');
-    src: url('../fonts/Museo 300/Museo300-Regular-webfont.eot?iefix') format('eot'),
-         url('../fonts/Museo 300/Museo300-Regular-webfont.woff') format('woff'),
-         url('../fonts/Museo 300/Museo300-Regular-webfont.ttf') format('truetype'),
-         url('../fonts/Museo 300/Museo300-Regular-webfont.svg#webfontQF7qPaga') format('svg');
+    src: url('../fonts/Museo300/Museo300-Regular-webfont.eot');
+    src: url('../fonts/Museo300/Museo300-Regular-webfont.eot?iefix') format('eot'),
+         url('../fonts/Museo300/Museo300-Regular-webfont.woff') format('woff'),
+         url('../fonts/Museo300/Museo300-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/Museo300/Museo300-Regular-webfont.svg#webfontQF7qPaga') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -145,7 +145,7 @@ a.sidebar-selected{
 .searchfield {
 	background: #fff;
 	padding: 6px 6px 6px 8px;
-	width: 215px;
+	width: 210px;
 	border: solid 1px #bcbbbb;
 	border-right: none;
 	border-style: none;
@@ -154,9 +154,9 @@ a.sidebar-selected{
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
-	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
-	box-shadow: inset 0 1px 2px rgba(0,0,0,.3);
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
 }
 
 .searchbutton{
@@ -166,6 +166,7 @@ a.sidebar-selected{
 	background: url('../images/search.png');
 	border: none;
 	margin-top: 6px;
+	margin-right: 4px;
 }
 
 .searchbutton:focus{
@@ -176,16 +177,50 @@ a.sidebar-selected{
 	cursor: hand;
 }
 
-ul#subheader {
+#content-header h3 {
+	position: absolute;
 	width: 500px;
-}
-#subheader li {
-	display: inline;
+	bottom: 0;
+	margin-bottom: 10px;
 }
 
-header {
-	border-bottom: 1px dotted #cccccc;
+ul#subheader {
+	border-bottom: 1px solid #cccccc;
+	z-index: 0;
+	padding: 5px 5px 0px 0;
+	font-size: .9em;
 }
+.subheader-selected{
+	border: 1px solid #cccccc;
+	border-bottom: 1px solid white;
+	padding: 5px 5px 0px 5px;
+	font-size: 1.1em;
+	font-family: "Museo500";
+}
+
+#subheader li{
+	display: inline;
+	z-index: 100;
+	padding: 5px 5px 5px 0;
+}
+#subheader li a:hover {
+
+	border: 1px solid #cccccc;
+	border-bottom: 1px solid white;
+	padding: 5px 5px 0px 5px;
+}
+
+#content-header{
+	height: 40px;
+	position: relative;
+}
+
+#content-header h3{
+	position: absolute;
+	top: 3px;
+	color: #5c5c5c;
+}
+
 /* DISCUSSIONS */
 section {
 	position: relative;
@@ -201,10 +236,10 @@ section {
 	z-index: 0;
 }
 
-section a{
+article a{
 	color: #4b98b9;
 }
 
-section a:hover{
+article a:hover{
 	color: #f49d31;
 }
