uploading latest front-end code

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -236,10 +236,87 @@ section {
 	z-index: 0;
 }
 
-#topic-list a{
+.topic-title {
+	font-family: 'Museo500';
+	font-size: 1.2em;
+}
+
+.topic-title, .more {
+	display: block;
 	color: #4b98b9;
 }
 
-#topic-list a:hover{
+.topic-title:hover, .more:hover {
 	color: #f49d31;
+}
+
+#topic-list li{
+	border-bottom: 1px dotted #cccccc;
+	padding: 1em;
+}
+
+#up{
+	width: 20px;
+	height: 20px;
+	background: url('../images/arrow.png') no-repeat;
+	padding-top: 21px;
+}
+
+#top {
+	border: 1px solid #ddd;
+    display: block;
+    float: left;
+    padding: 5px;
+	margin-right: 15px;
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+	-webkit-border-radius: 7px;
+	text-align: center;
+}
+
+#top:hover{
+	background: #eeeeee;
+	color: none;
+}
+
+#comments{
+	width: 24px;
+	height: 21px;
+	background: url('../images/bubble.png');
+    float: left;
+	color: white;
+	font-size: .8em;
+	text-align: center;
+}
+
+#user {
+    float: right;
+}
+.more {
+    float: left;
+}
+.time{
+	font-size: .9em;
+	color: #aaaaaa;
+}
+.username{
+	font-family: 'Museo500';
+}
+
+.reputation{
+	font-family: 'Museo500';
+	color: #4b98b9;
+}
+
+#user span{
+	padding-left: .3em;
+}
+
+.more {
+	margin-left: 1.1em;
+}
+
+#bar {
+	margin-left: .3em;
+	padding: .8em	0em;
 }
