--- a/html/css/style.css
+++ b/html/css/style.css
@@ -289,6 +289,48 @@ section {
 	text-align: center;
 }
 
+.ui-dialog{
+	position: absolute;
+	top: 0px;
+	width: 300px;
+	height: 400px;
+	padding: 1em;
+	background: white;
+	border: 1px solid #cccccc;
+}
+
+.ui-dialog .ui-dialog-titlebar { 
+	padding: .5em .3em .3em 1em; 
+	position: relative;  
+	font-family: 'Museo500';
+	font-size: 1em;
+	border-radius: 5px;
+}
+
+.ui-dialog .ui-dialog-titlebar-close {
+    background: #cccccc;
+    margin: -55px 0 0;
+    padding: 4px 10px;
+    position: absolute;
+    right: -1.1em;
+    color: #ffffff;
+}
+
+.ui-draggable .ui-dialog-titlebar { 
+	cursor: move; 
+	border: 1px solid #cccccc; 
+	background: #4b98b9;
+}
+
+.ui-dialog-title{
+	color: white;
+}
+.ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
+.ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { background: #dddddd; }
+.ui-dialog .ui-dialog-content { border: 0; padding: .5em 1em; background: none; overflow: auto; zoom: 1; }
+.ui-dialog .ui-dialog-buttonpane { text-align: left; border-width: 1px 0 0 0; background-image: none; margin: .5em 0 0 0; padding: .3em 1em .5em .4em; }
+.ui-dialog .ui-dialog-buttonpane button { float: right; margin: .5em .4em .5em 0; cursor: pointer; padding: .2em .6em .3em .6em; line-height: 1.4em; width:auto; overflow:visible; }
+.ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
 #user {
     float: right;
 }
@@ -320,3 +362,56 @@ section {
 	margin-left: .3em;
 	padding: .8em	0em;
 }
+
+#darken {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #333333;
+	opacity: .2;
+	z-index: 9000000;
+}
+
+.ui-dialog .ui-state-error { padding: .3em; background: red; }
+
+.compose-form{
+	padding: 1em;
+}
+
+
+.subject {
+	background: #fff;
+	width: 100%;
+	padding: 6px 6px 6px 8px;
+	border: solid 1px #bcbbbb;
+	outline: none;
+	height: 20px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+}
+
+
+.message {
+	margin-top: 2em;
+	font-family: 'Museo300';
+	background: #fff;
+	padding: 6px 6px 6px 8px;
+	width: 100%;
+	border: solid 1px #bcbbbb;
+	outline: none;
+	height: 120px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+}
+
+
