--- a/html/css/style.css
+++ b/html/css/style.css
@@ -297,6 +297,7 @@ section {
 	padding: 1em;
 	background: white;
 	border: 1px solid #cccccc;
+	box-shadow: 0px 0px 50px rgba(0, 0, 0, 1);
 }
 
 .ui-dialog .ui-dialog-titlebar { 
@@ -413,5 +414,3 @@ section {
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
 }
-
-
