--- a/html/css/style.css
+++ b/html/css/style.css
@@ -255,6 +255,10 @@ section {
 	padding: 1em;
 }
 
+#topic-list li:nth-child(2n){
+	background: #eeeeff;
+}
+
 #up{
 	width: 20px;
 	height: 20px;
@@ -272,11 +276,17 @@ section {
     -moz-border-radius: 7px;
 	-webkit-border-radius: 7px;
 	text-align: center;
+	background: white;
+	/*box-shadow: 0px 2px 2px #777;*/
+}
+
+#top:focus{
+	box-shadow: 0 0 0;
+	/*margin-top: 2px;*/
 }
 
 #top:hover{
-	background: #eeeeee;
-	color: none;
+	background: #eee;
 }
 
 #comments{
@@ -413,4 +423,15 @@ section {
 	-moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
 	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
 	box-shadow: inset 0 1px 2px rgba(0,0,0,.4);
+}
+
+.right30{
+	margin-left: 100px;
+}
+
+.right60{
+	margin-left: 200px;
+}	
+.right90{
+	margin-left: 300px;
 }
